# mngLocalMacAddr

./: .gitignore  GenMacAddr.py  MngMacDB.py  README.md  changelog  mac.db  mngLocalMacAddr.py  notes.ctb  setup.cfg
src/lib/: GenMacAddr.py  MngMacDB.py
src/plugins/actions/: delete.py  generate.py  list.py  populate.py
tests/: test.py
