[metadata]
name = mngLocalMacAddr
version = 0.0.1
author = stitchmeup
description = Manage and Generate unique LAA and VirtualBox Mac Address
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GLP v3.0
    Operating System :: Linux
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
